[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["OlegKan888 <olezhkakan888@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
pymongo = "^4.10.1"
quotes = "^0.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
